Added buttons for edit and delete comments

--- a/MicroSocialPlatform/Views/Home/PostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/PostPartial.cshtml
@@ -8,7 +8,7 @@
     <div class="post-header">
         <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
         <p class="username">@Model.User.UserName</p>
-        <div class="edit-post-btn">
+        <div class="settings-post-btn">
             <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
         </div>
     </div>
