--- a/MicroSocialPlatform/Views/Home/Index.cshtml
+++ b/MicroSocialPlatform/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
           })
         });
      const delete_buttons = document.querySelectorAll('.set-divs')
-     const action_divs = document.querySelectorAll('.edit-post-btn')
+     const action_divs = document.querySelectorAll('.settings-post-btn')
              $(document).ready(function() {
                  $.each(action_divs, function(ind, butt) {
                  butt.addEventListener("click",function() {
