--- a/MicroSocialPlatform/Views/Shared/MenuBar.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MenuBar.cshtml
@@ -9,6 +9,7 @@
     var currentController = ViewContext.RouteData.Values["controller"].ToString();
     var profileClass = currentController == "Profile" ? "active" : "";
     var homeClass = currentController == "Home" ? "active" : "";
+    var peopleClass = currentController == "People" ? "active" : "";
     Profile? profile = null;
     if (signedIn)
     {
@@ -35,12 +36,12 @@
                 <span class="title">Groups</span>
             </a>
         </li>
-        <li class="list">
-            <a href="#">
+        <li class="list @peopleClass">
+            <a href="/people">
                 <span class="icon">
                     <ion-icon name="person-circle-outline"></ion-icon>
                 </span>
-                <span class="title">Friends</span>
+                <span class="title">People</span>
             </a>
         </li>
         <li class="list">
@@ -82,6 +83,5 @@
         </li>
     </ul>
 </div>
-@Html.Partial("SearchBar");
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
