--- a/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/ProfileEdit.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/PostEditor.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/CommentEditor.css" asp-append-version="true">
+    <link rel="stylesheet" type="text/css" href="~/css/People.css" asp-append-version="true">
    
     <title> @ViewBag.Title</title>
 </head>
