Added visibility and style for display people

--- a/MicroSocialPlatform/Views/People/Index.cshtml
+++ b/MicroSocialPlatform/Views/People/Index.cshtml
@@ -3,14 +3,11 @@
     Layout = "MyLayout";
 }
 
-
 @Html.Partial("SearchBar", new SearchModel("/people"));
 <div class="people">
     @foreach (var user in Model.Users)
     {
-        <div>
-            <a asp-route="profile" asp-route-id="@user.UserProfile.Id"> @user.UserName</a>
-        </div>
+        @Html.Partial("PeoplePartial",user)
     }
 
 </div>
