--- a/MicroSocialPlatform/wwwroot/css/People.css
+++ b/MicroSocialPlatform/wwwroot/css/People.css
@@ -1,4 +1,91 @@
 .people {
+    position: absolute;
+    height: 1000vh;
+    width: 70%;
+    top: 60px;
+    left: 10%;
+    display: flex;
+    flex-flow: row wrap;
+}
+.people>* {
+    flex: 1 0 200px;
+}
+.card {
+    display: flex;
+    height: 40vh;
+    width: 30%;
+    background-color: #17141d;
+    border-radius: 10px;
+    box-shadow: -1rem 0 3rem #000;
+    transition: 0.4s ease-out;
+    position: relative;
+}
+
+.card:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card:hover {
+    transform: translateY(-20px);
+    transition: 0.4s ease-out;
+}
+
+.card:hover ~ .card {
+    position: relative;
+    left: 50px;
+    transition: 0.4s ease-out;
+}
+.pnume{
+    align-self: center;
+    top:5vh;
+}
+.person-name {
     color: white;
-    margin-left: 40%;
+    font-weight: 300;
+    position: absolute;
+    left: 20px;
+    top: 15px;
+}
+
+.bar {
+    position: absolute;
+    top: 15vh;
+    left: 20px;
+    height: 5px;
+    width: 150px;
+}
+
+.emptybar {
+    background-color: #2e3033;
+    width: 100%;
+    height: 100%;
+}
+
+.filledbar {
+    position: absolute;
+    top: 0;
+    z-index: 3;
+    width: 0;
+    height: 100%;
+    background: rgb(0,154,217);
+    background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
+    transition: 0.6s ease-out;
+}
+
+.card:hover .filledbar {
+    width: 100%;
+    transition: 0.4s ease-out;
+}
+.view-people-btn{
+    height: 5vh;
+    width: 90%;
+    box-shadow: inset 10px 10px 10px #79525f, 15px 25px 10px rgb(138 89 118 / 10%), 15px 20px 20px rgb(151 95 147 / 10%), inset -10px -10px 15px rgb(255 255 255 / 10%);
+    border-radius: 10px 300px 10px 300px;
+    margin: 30vh auto;
+    background: rgba(139, 139, 139, 0.23);
+    backdrop-filter: blur(10px);
+    cursor: pointer;
+}
+.view-people-btn p {
+    color: whitesmoke;
 }
