--- a/MicroSocialPlatform/wwwroot/css/Post.css
+++ b/MicroSocialPlatform/wwwroot/css/Post.css
@@ -10,14 +10,14 @@
     z-index: 1;
 }
 .new-post-btn{
-    width: 70vw;
+    width: 50vw;
     height: 6vh;
     box-shadow: inset 10px 10px 10px #79525f,
     15px 25px 10px rgba(138, 89, 118, 0.1),
     15px 20px 20px rgba(151, 95, 147, 0.1),
     inset -10px -10px 15px rgba(255, 255, 255, 0.1);
     border-radius: 10px 300px 10px 300px;
-    margin: auto auto 0;
+    margin: auto auto;
     background: rgba(139, 139, 139, 0.23);
     backdrop-filter: blur(10px);
 }
@@ -30,14 +30,14 @@
 /*post section*/
 
 .post-container{
-    width: 80%;
+    width: 65%;
     margin: auto auto;
 }
 
 .post{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     margin-bottom: 30px;
     border-radius: 50px;
     border: 1px solid;
