--- a/MicroSocialPlatform/Views/Post/Index.cshtml
+++ b/MicroSocialPlatform/Views/Post/Index.cshtml
@@ -9,7 +9,11 @@
     <div class="post-s">
         <div class="post-header-s">
             <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
-            <p class="username">@Model.User.UserName</p>
+            <form method="post" asp-route="profile" asp-route-id="@Model.User.UserProfile.Id" class="link-to-user">
+                <button type="submit" class="user-button">
+                    <p class="username">@Model.User.UserName</p>
+                </button>
+            </form>
             <div class="settings-post-btn">
                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
             </div>
@@ -17,6 +21,7 @@
         <div class="post-feed-s">
             <div class="post-img-container-s">
                 <div class="text-cont">
+                    <p class="post-title">@Model.Title</p>
                     <p class="text">@Model.Content</p>
                 </div>
                 <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" alt="">
