--- a/MicroSocialPlatform/wwwroot/css/Post.css
+++ b/MicroSocialPlatform/wwwroot/css/Post.css
@@ -60,12 +60,22 @@
     height: 30px;
     border-radius: 50%;
 }
+.post-header .link-to-user{
+    margin: auto;
+    width: -webkit-fill-available;
+}
+.post-header .user-button{
+     width: inherit;
+     background: none;
+     border: none;
+     cursor: pointer;
+     font-size: inherit;
+     text-align: -webkit-auto;
+ }
 .post-header .username{
     font-size: 0.9em;
     font-weight: 600;
     color: whitesmoke;
-    margin: auto;
-    width: -webkit-fill-available;
 }
 .settings-post-btn{
     color: whitesmoke;
@@ -98,6 +108,24 @@
     width: 100%;
     height: 5vh;
 }
+.post-img-container .text-cont .post-button{
+    width: 100%;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: inherit;
+    text-align: -webkit-auto;
+}
+
+.post-img-container .text-cont .post-title{
+    margin-top: 3px;
+    color:whitesmoke;
+    font-size: 1.1rem;
+    inline-size: 100%;
+    overflow-wrap : break-word;
+    margin-bottom: 10px;
+    text-align: center;
+}
 .post-img-container .text-cont .text{
     margin-top: 3px;
     color:whitesmoke;
@@ -105,6 +133,7 @@
     inline-size: 100%;
     overflow-wrap : break-word;
 }
+
 .post-detail{
     padding: 1.2rem;
 }
