--- a/MicroSocialPlatform/wwwroot/css/SinglePost.css
+++ b/MicroSocialPlatform/wwwroot/css/SinglePost.css
@@ -40,12 +40,22 @@
     height: 30px;
     border-radius: 50%;
 }
+.post-header-s .link-to-user{
+    margin: auto;
+    width: -webkit-fill-available;
+}
+.post-header-s .user-button{
+    width: inherit;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: inherit;
+    text-align: -webkit-auto;
+}
 .post-header-s .username{
     font-size: 0.9em;
     font-weight: 600;
     color: whitesmoke;
-    margin: auto;
-    width: -webkit-fill-available;
 }
 .post-feed-s{
     width: 100%;
@@ -70,6 +80,15 @@
 .post-img-container-s .text-cont{
     width: 100%;
     height: 5vh;
+}
+.post-img-container-s .text-cont .post-title{
+    margin-top: 3px;
+    color:whitesmoke;
+    font-size: 1.1rem;
+    inline-size: 100%;
+    overflow-wrap : break-word;
+    margin-bottom: 10px;
+    text-align: center;
 }
 .post-img-container-s .text-cont .text{
     margin-top: 3px;
