--- a/MicroSocialPlatform/Views/Home/PostPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/PostPartial.cshtml
@@ -7,7 +7,7 @@
 <div class="post">
     <div class="post-header">
         <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
-        <form method="post" asp-route="profile" asp-route-id="@Model.User.UserProfile.Id" class="link-to-user">
+        <form method="get" asp-route="profile" asp-route-id="@Model.User.UserProfile.Id" class="link-to-user">
             <button type="submit" class="user-button">
                 <p class="username">@Model.User.UserName</p>
             </button>
@@ -18,7 +18,7 @@
     </div>
     <div class="post-feed">
         <div class="post-img-container">
-            <form method="post" asp-route="post" asp-route-id="@Model.Id" class="text-cont">
+            <form method="get" asp-route="post" asp-route-id="@Model.Id" class="text-cont">
                 <button type="submit" class="post-button">
                     <p class="post-title">@Model.Title</p>
                     <p class="text">@Model.Content</p>
