Added title for all pages

--- a/MicroSocialPlatform/Views/Home/Index.cshtml
+++ b/MicroSocialPlatform/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @model HomeView;
 @{
     Layout = "MyLayout";
+    ViewData["Title"] = "Home Page";
 }
 <section class="main">
     <button class="new-post-btn"><a asp-route="new_post">Create a new post</a></button>
