--- a/MicroSocialPlatform/Views/People/Index.cshtml
+++ b/MicroSocialPlatform/Views/People/Index.cshtml
@@ -1,6 +1,7 @@
 @model PeopleView 
 @{
     Layout = "MyLayout";
+    ViewData["Title"] = "Users";
 }
 
 @Html.Partial("SearchBar", new SearchModel("/people"));
