Fixed view profile button from people partial

--- a/MicroSocialPlatform/Views/People/PeoplePartial.cshtml
+++ b/MicroSocialPlatform/Views/People/PeoplePartial.cshtml
@@ -7,7 +7,7 @@
         <div class="emptybar"></div>
         <div class="filledbar"></div>
     </div>
-    <form asp-route="profile" asp-route-id="@Model.UserProfile.Id" style="display: contents;">
+    <form asp-route="profile" asp-route-id="@Model.UserProfile.Id" style="display: contents;" method="get">
         <button type="submit" class="view-people-btn">
             <p>View profile</p>
         </button>
