--- a/MicroSocialPlatform/wwwroot/css/People.css
+++ b/MicroSocialPlatform/wwwroot/css/People.css
@@ -59,6 +59,7 @@
     background-color: #2e3033;
     width: 100%;
     height: 100%;
+    border-radius: 25px;
 }
 
 .filledbar {
@@ -67,6 +68,7 @@
     z-index: 3;
     width: 0;
     height: 100%;
+    border-radius: 25px;
     background: rgb(0,154,217);
     background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
     transition: 0.6s ease-out;
