--- a/MicroSocialPlatform/wwwroot/css/Generic.css
+++ b/MicroSocialPlatform/wwwroot/css/Generic.css
@@ -1,5 +1,35 @@
 @import url('https://fonts.google.com/share?selection.family=Merriweather:ital@1%7CPlayfair%20Display:ital@1');
-
+:root {
+    --all-text-color: whitesmoke;
+    /*Post-variables*/
+    --bg-post-color: rgba(255, 255, 255, 0.05);
+    --default-box-shadow: inset 10px 10px 10px #79525f,
+    15px 25px 10px rgba(138, 89, 118, 0.1),
+    15px 20px 20px rgba(151, 95, 147, 0.1),
+    inset -10px -10px 15px rgba(255, 255, 255, 0.1);
+    --post-box-shadow: inset 10px 20px 20px #9f6f80,
+    11px 2px 15px #9f6f80,
+    4px -4px 30px #9f6f80,
+    inset -20px -18px 25px rgba(255, 255, 255, 0.1);
+    /*Single-post-variables*/
+    --comments-box-shadow: inset 10px 10px 10px #79525f,
+    15px 25px 10px rgba(138, 89, 118, 0.1),
+    15px 20px 20px rgba(151, 95, 147, 0.1),
+    inset -10px -10px 15px rgba(255, 255, 255, 0.1);
+    /*Profile-view-variables*/
+    --profile-box-shadow:inset 10px 10px 10px #79525f,
+    15px 25px 10px rgba(138, 89, 118, 0.1),
+    15px 20px 20px rgba(151, 95, 147, 0.1),
+    inset -10px -10px 15px rgba(255,255,255,0.5);
+    --btn-bg:rgba(255, 255, 255, 0.05);
+    --default-border-r:10px 300px 10px 300px;
+    /*Message-variables*/
+    --chat-bars-color: #343434;
+    --person-hover: #7c6f9a;
+    --person-focus: #5e4085;
+    --avatar-background: linear-gradient(to bottom left, #507e7b 20%, #a1e2d9 100%);
+    --chat-input-bg: #343434;
+}
 * {
     margin: 0;
     padding: 0;
