--- a/MicroSocialPlatform/wwwroot/css/ProfileEdit.css
+++ b/MicroSocialPlatform/wwwroot/css/ProfileEdit.css
@@ -5,11 +5,8 @@
     display: flex;
     flex-direction: column;
     padding: 0 3vh 20px;
-    box-shadow: inset 10px 10px 10px #79525f,
-    15px 25px 10px rgba(138, 89, 118, 0.1),
-    15px 20px 20px rgba(151, 95, 147, 0.1),
-    inset -10px -10px 15px rgba(255,255,255,0.5);
-    background: rgba(255, 255, 255, 0.05);
+    box-shadow: var(--profile-box-shadow);
+    background: var(--btn-bg);
     backdrop-filter: blur(10px);
     overflow-x: hidden;
     align-items: center;
@@ -64,11 +61,8 @@
     margin: auto auto;
     width: 20vh;
     height: 5vh;
-    box-shadow: inset 10px 10px 10px #79525f,
-    15px 25px 10px rgba(138, 89, 118, 0.1),
-    15px 20px 20px rgba(151, 95, 147, 0.1),
-    inset -10px -10px 15px rgba(255,255,255,0.5);
-    background: rgba(255, 255, 255, 0.05);
+    box-shadow: var(--profile-box-shadow);
+    background: var(--btn-bg);
     backdrop-filter: blur(10px);
     border-radius: 10px 300px 10px 300px;
     align-self: flex-end;
