--- a/MicroSocialPlatform/wwwroot/css/SinglePost.css
+++ b/MicroSocialPlatform/wwwroot/css/SinglePost.css
@@ -1,190 +1,74 @@
-/*Post part*/
-
-.post-with-comments{
-    width: 100%;
-    height:100vh;
-    position: relative;
+.post-with-comments {
     display: flex;
     flex-direction: column;
-    padding :20px 10vw 100px;
+    height: 100vh;
     margin: 1px auto;
-    z-index: 1;
     overflow-y: hidden;
-}
-/*post section*/
-
-.post-s{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 63vh;
-    margin-bottom: 30px;
-    border-radius: 50px;
-    border: 1px solid;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
-    box-shadow: inset 10px 20px 20px #9f6f80,
-    11px 2px 15px #9f6f80,
-    4px -4px 30px #9f6f80,
-    inset -20px -18px 25px rgba(255,255,255,0.1);
-}
-.post-header-s{
-    display: flex;
-    align-items: center;
-    padding: 1.2em;
-    gap: 10px;
-    justify-content: space-around;
-}
-.post-header-s .user-icon{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-.post-header-s .link-to-user{
-    margin: auto;
-    width: -webkit-fill-available;
-}
-.post-header-s .user-button{
-    width: inherit;
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: inherit;
-    text-align: -webkit-auto;
-}
-.post-header-s .username{
-    font-size: 0.9em;
-    font-weight: 600;
-    color: whitesmoke;
-}
-.post-feed-s{
-    width: 100%;
-    height: 400px;
+    padding: 20px 10vw 100px;
     position: relative;
-}
-.post-img-container-s{
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    z-index: 1
 }
-.post-img-container-s img{
-    margin-top: 5%;
-    min-width: 100%;
-    height: 90%;
-    object-fit:fill;
-    transition: 0.5s;
-    border-radius: 20px;
+
+.post-s {
+    height: 63vh;
+    width: 50%
 }
-.post-img-container-s .text-cont{
-    width: 100%;
-    height: 5vh;
-}
-.post-img-container-s .text-cont .post-title{
-    margin-top: 3px;
-    color:whitesmoke;
-    font-size: 1.1rem;
-    inline-size: 100%;
-    overflow-wrap : break-word;
-    margin-bottom: 10px;
-    text-align: center;
-}
-.post-img-container-s .text-cont .text{
-    margin-top: 3px;
-    color:whitesmoke;
-    scale: 0.9;
-    inline-size: 100%;
-    overflow-wrap : break-word;
-}
-.post-detail-s{
-    padding: 1.2rem;
-}
-.detail-intracables-s{
-    display: flex;
-    gap:20px;
-}
-.detail-intracables-s .lbut,
-.detail-intracables-s .cbut{
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-}
-.comments-s{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    float:right;
-    right: -114%;
-    width: 106%;
+
+.comments-s {
+    backdrop-filter: blur(10px);
     height: 97vh;
-    transition: left .3s ease-out;
-    border-radius: 20px 20px 20px 20px ;
-    box-shadow: inset 10px 10px 10px #79525f,
-    15px 25px 10px rgba(138, 89, 118, 0.1),
-    15px 20px 20px rgba(151, 95, 147, 0.1),
-    inset -10px -10px 15px rgba(255,255,255,0.2);
-    border: 1px solid;
-    overflow: scroll;
-    gap:10px;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
+    right: -114%;
+    width: 106%
 }
 
-
-.comment-box{
-    width: 100%;
-    height: 40px;
-    display: flex;
-    position: sticky;
-    position: -webkit-sticky;
-    bottom: 0;
-    margin: auto auto 0;
+.comment-box {
     align-self: flex-end;
-}
-
-#comment-input{
-    width: 100%;
-    height: 42px;
-    box-shadow: inset 10px 10px 10px #79525f,
-    15px 25px 10px rgba(138, 89, 118, 0.1),
-    15px 20px 20px rgba(151, 95, 147, 0.1),
-    inset -10px -10px 15px rgba(255,255,255,0.1);
-    background: rgba(139, 139, 139, 0.93);
-    backdrop-filter: blur(10px);
-    overflow-wrap : break-word;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    padding: 10px;
-    line-height: 40px;
-    border: 1px solid #0d0d0d;
-    z-index:0!important;
-    font-size: 1rem;
-}
-#comment-input::placeholder{
-    color: rgb(4, 4, 4);
-}
-#comment-input:focus{
-    border: 1px solid;
-}
-
-.add-comment-btn{
+    bottom: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width:60px;
     height: 40px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    box-shadow: inset 10px 10px 10px #79525f,
-    15px 25px 10px rgba(138, 89, 118, 0.1),
-    15px 20px 20px rgba(151, 95, 147, 0.1),
-    inset -10px -10px 15px rgba(255,255,255,0.1);
-    background: rgba(139, 139, 139, 0.73);
-    backdrop-filter: blur(10px);
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    color: black;
+    margin: auto auto 0;
+    position: sticky;
+    width: 100%
 }
 
+#comment-input {
+    backdrop-filter: blur(10px);
+    background: rgba(139, 139, 139, 0.93);
+    border: 1px solid #0d0d0d;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    box-shadow: var(--comments-box-shadow);
+    font-size: 1rem;
+    height: 42px;
+    line-height: 40px;
+    overflow-wrap: break-word;
+    padding: 10px;
+    width: 100%;
+    z-index: 0 !important
+}
+
+#comment-input::placeholder {
+    color: #040404
+}
+
+#comment-input:focus {
+    border: 1px solid
+}
+
+.add-comment-btn {
+    align-items: center;
+    backdrop-filter: blur(10px);
+    background: rgba(139, 139, 139, 0.73);
+    border: none;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: var(--comments-box-shadow);
+    color: #000;
+    cursor: pointer;
+    display: flex;
+    height: 40px;
+    justify-content: center;
+    outline: none;
+    width: 60px
+}
