--- a/MicroSocialPlatform/wwwroot/css/StartPage.css
+++ b/MicroSocialPlatform/wwwroot/css/StartPage.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     height: 100vh;
     font-weight: 100;
-    background: radial-gradient(#412752,#0d0d0d);
+    background: radial-gradient(#412752, #0d0d0d);
     -webkit-overflow-Y: hidden;
     -moz-overflow-Y: hidden;
     -o-overflow-Y: hidden;
@@ -25,10 +25,7 @@ button {
     height: 3em;
     font-size: 1.2em;
     font-weight: bold;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 500px;
-    border-bottom-left-radius: 500px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px 500px 10px 500px;
     opacity: .5;
     top: 60vh;
     bottom: 0;
@@ -38,7 +35,8 @@ button {
     transition: .3s;
     z-index: 1;
 }
-button a{
+
+button a {
     font-size: 1.2em;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
@@ -48,12 +46,12 @@ button a{
 
 button:hover {
     border: 2px solid #104F55;
-    background-color: rgba(365,365,365,0.5);
+    background-color: rgba(365, 365, 365, 0.5);
     cursor: pointer;
     color: #060707;
     opacity: .8;
     transition: .3s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 button:focus {
@@ -144,93 +142,92 @@ button:focus {
     overflow: hidden;
 }
 
-    .circles li {
-        position: absolute;
-        display: block;
-        list-style: none;
-        width: 20px;
-        height: 20px;
-        background: rgba(255, 255, 255, 0.2);
-        animation: animate 25s linear infinite;
-        bottom: -150px;
-    }
+.circles li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+}
 
-        .circles li:nth-child(1) {
-            left: 25%;
-            width: 80px;
-            height: 80px;
-            animation-delay: 0s;
-        }
+.circles li:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
 
 
-        .circles li:nth-child(2) {
-            left: 10%;
-            width: 20px;
-            height: 20px;
-            animation-delay: 2s;
-            animation-duration: 12s;
-        }
+.circles li:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
 
-        .circles li:nth-child(3) {
-            left: 70%;
-            width: 20px;
-            height: 20px;
-            animation-delay: 4s;
-        }
+.circles li:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
 
-        .circles li:nth-child(4) {
-            left: 40%;
-            width: 60px;
-            height: 60px;
-            animation-delay: 0s;
-            animation-duration: 18s;
-        }
+.circles li:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
 
-        .circles li:nth-child(5) {
-            left: 65%;
-            width: 20px;
-            height: 20px;
-            animation-delay: 0s;
-        }
+.circles li:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
 
-        .circles li:nth-child(6) {
-            left: 75%;
-            width: 110px;
-            height: 110px;
-            animation-delay: 3s;
-        }
+.circles li:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
 
-        .circles li:nth-child(7) {
-            left: 35%;
-            width: 150px;
-            height: 150px;
-            animation-delay: 7s;
-        }
+.circles li:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
 
-        .circles li:nth-child(8) {
-            left: 50%;
-            width: 25px;
-            height: 25px;
-            animation-delay: 15s;
-            animation-duration: 45s;
-        }
+.circles li:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
 
-        .circles li:nth-child(9) {
-            left: 20%;
-            width: 15px;
-            height: 15px;
-            animation-delay: 2s;
-            animation-duration: 35s;
-        }
+.circles li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
 
-        .circles li:nth-child(10) {
-            left: 85%;
-            width: 150px;
-            height: 150px;
-            animation-delay: 0s;
-            animation-duration: 11s;
-        }
-
+.circles li:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
 
 
 @keyframes animate {
@@ -250,12 +247,11 @@ button:focus {
 
 
 .light {
-    box-shadow: #c7d4d4bc 0px 0px 20px 2px;
+    box-shadow: #c7d4d4bc 0 0 20px 2px;
     opacity: 0.2;
     top: 100vh;
     margin: 0.5px;
 }
-
 
 
 @-webkit-keyframes fadeIn {
@@ -447,8 +443,7 @@ button:focus {
     font-size: 1.2em;
     color: white;
     position: fixed;
-    -webkit-transform: translate(95vw,90vh);
-    -moz-transform: translate(95vw,90vh);
-    transform: translate(95vw,90vh);
-    transform: translate(95vw,90vh);
+    -webkit-transform: translate(95vw, 90vh);
+    -moz-transform: translate(95vw, 90vh);
+    transform: translate(95vw, 90vh);
 }
